# bldc-motor

./: .gitattributes  .gitmodules  README.md
common/: attaConnector.cpp  attaConnector.h  attaConnector.inl  attaConnectorCmds.h
controller/: controller.cpp  controller.h  focController.cpp  focController.h  trapezoidalController.cpp  trapezoidalController.h
electrical/: .gitignore  BLDCM.kicad_prl  BLDCM.kicad_pro
electrical/BLDCM-MCU/: BLDCM-MCU.kicad_pcb  BLDCM-MCU.kicad_pro  BLDCM-MCU.kicad_sch
electrical/BLDCM-Power/: BLDCM-Power.kicad_pcb  BLDCM-Power.kicad_sch
electronics/: .gitignore  README.md
electronics/BLDCM-MCU/: BLDCM-MCU.kicad_pcb  BLDCM-MCU.kicad_pro  BLDCM-MCU.kicad_sch  fp-lib-table  sym-lib-table
electronics/BLDCM-Power/: BLDCM-Power.kicad_pcb  BLDCM-Power.kicad_pro  BLDCM-Power.kicad_sch  PowerManagement.kicad_sch
firmware/: .gitignore  CMakeLists.txt  Makefile  README.md  bldc  bldc.sh
firmware/base/cube/CMSIS/STM32F4xx/inc/: stm32f446xx.h
firmware/base/cube/HAL/STM32F4xx/inc/: stm32f4xx_hal_adc.h  stm32f4xx_hal_adc_ex.h  stm32f4xx_hal_dcmi.h  stm32f4xx_hal_dcmi_ex.h  stm32f4xx_hal_i2c.h  stm32f4xx_hal_i2c_ex.h  stm32f4xx_hal_pcd.h  stm32f4xx_hal_pcd_ex.h  stm32f4xx_hal_spi.h  stm32f4xx_hal_uart.h  stm32f4xx_ll_adc.h  stm32f4xx_ll_usb.h
firmware/base/cube/HAL/STM32F4xx/src/: stm32f4xx_hal_adc.c  stm32f4xx_hal_adc_ex.c  stm32f4xx_hal_dcmi.c  stm32f4xx_hal_dcmi_ex.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_i2c_ex.c  stm32f4xx_hal_pcd.c  stm32f4xx_hal_pcd_ex.c  stm32f4xx_hal_spi.c  stm32f4xx_hal_uart.c  stm32f4xx_ll_adc.c  stm32f4xx_ll_usb.c
firmware/base/cube/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
firmware/base/cube/USB_DEVICE/App/: usb_device.c  usb_device.h  usbd_cdc_if.c
firmware/base/linker/STM32F4xx/: STM32F401xC.ld  STM32F446xE.ld
firmware/base/make/: common.mk  series_folder_name.mk
firmware/base/make/STM32F4xx/: common.mk
firmware/base/openocd/: stm32f4.cfg
firmware/base/startup/STM32F4xx/: STM32F401xC.s  STM32F446xx.s
firmware/src/: main.cpp
firmware/src/drivers/: hardware.cpp  hardware.h
firmware/src/drivers/adc/: adc.cpp  adc.h
firmware/src/drivers/clock/: clock.cpp  clock.h
firmware/src/drivers/current/: current.cpp  current.h
firmware/src/drivers/dma/: dma.cpp  dma.h  dmaMapping.h
firmware/src/drivers/encoder/: encoder.cpp  encoder.h
firmware/src/drivers/gpio/: gpio.cpp  gpio.h  modes.h  ports.h
firmware/src/drivers/i2c/: i2c.cpp  i2c.h
firmware/src/drivers/imu/: imu.cpp  imu.h
firmware/src/drivers/interrupt/: interrupt.cpp  interrupt.h
firmware/src/drivers/led/: led.cpp  led.h
firmware/src/drivers/motor/: motor.cpp  motor.h
firmware/src/drivers/phase/: phase.cpp  phase.h
firmware/src/drivers/spi/: spi.cpp  spi.h
firmware/src/drivers/timer/: timer.cpp  timer.h
firmware/src/drivers/uart/: uart.cpp  uart.h
firmware/src/drivers/usb/: usb.cpp  usb.h  usbDevice.h  usbHid.h
firmware/src/drivers/voltage/: voltage.cpp  voltage.h
firmware/src/system/: FreeRTOSConfig.h  hal.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  sysmem.c  system_stm32f4xx.c
firmware/src/tasks/: tasks.cpp  tasks.h
firmware/src/utils/: attaConnector.cpp  attaConnector.h  attaConnector.inl  attaConnectorPlatform.cpp  attaConnectorPlatform.h  circularBuffer.cpp  circularBuffer.h  circularBuffer.inl  error.cpp  error.h  log.cpp  log.h  log.inl
mechanical/: .gitignore  BLDCM.FCStd  BLDCM_Chassis.FCStd  BLDCM_PCB_MCU.FCStd  BLDCM_PCB_Power.FCStd  BLDCM_Rotor_Adapter.FCStd  README.md
mechanical/parts/: Flat_Washer_M1.6.FCStd  HeatSet_M1.6_3MM.FCStd  Motor_EM3215.FCStd  Rotor_Adapter.FCStd  Screw_CS_5MM.FCStd  Screw_P_8MM.FCStd  Test_HeatSet_Hole.FCStd
simulation/: CMakeLists.txt  bldc.atta
simulation/src/: attaConnectorPlatform.cpp  attaConnectorPlatform.h  motor.cpp  motor.h  projectScript.cpp  projectScript.h
